# hops

./: README.md  dockerfile  flake.nix  notes.org  pyproject.toml
cli/: common.py  hi.py  result_utils.py
docs/source/: conf.py  index.rst
docs/source/modules/: core.rst  utilities.rst
docs/source/pages/: running_on_zih.rst  tutorial.rst
examples/01_simple_run/: README.md  config.py  ray-cluster.yaml
examples/hierarchy_indexing/: run.py
examples/simple_spin_boson_model/: spin_boson.py
hops/core/: hi_idx.py  hierarchy_data.py  hierarchy_math.py  hierarchy_parameters.py  idx_dict.py  integration.py  signal_delay.py  utility.py
hops/data/: good_fit_data_abs  good_fit_data_abs_brute_force  good_fit_data_rel  good_fit_data_rel_brute_force  path.py
hops/util/: abstract_truncation_scheme.py  bcf.py  bcf_fits.py  dynamic_matrix.py  finite_environment.py  logging_setup.py  truncation_schemes.py  utilities.py  zeta_function.py
tests/: fixtures.py  test_against_qutip.py  test_hi_data.py  test_hierarchy_parameters.py  test_integration.py
tests/data/test_m_nonz_nl_one_dynamic/: data.h5
tests/data/test_m_nonz_nl_two_dynamic/: data.h5
tests/data/test_multi_nonzero_lin/: data.h5
tests/data/test_multi_nonzero_lin_one_dyn/: data.h5
tests/data/test_multi_nonzero_lin_two_dyn/: data.h5
tests/data/test_multi_nonzero_nonlin/: data.h5
tests/data/test_multi_zero_lin/: data.h5
tests/data/test_multi_zero_nonlin/: data.h5
tests/data/test_nonzero_lin/: data.h5
tests/data/test_nonzero_nonlin/: data.h5
tests/data/test_zero_lin/: data.h5
tests/data/test_zero_nonlin/: data.h5
